--- a/_config.yml
+++ b/_config.yml
@@ -1,53 +1,38 @@
 # Basic
-title: 潘柏信
-subtitle: 个人站
+title: YiTeiCZR Blog
+subtitle: YT & CZR
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: YiTeiCZR
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: 独立组织开发 / UXUF-desk
 url: "http://leopardpan.cn"
 
 # 博客是否自动生成目录，false为不生成
 enableToc: true
 
 # Comment
-comment:
+#comment:
     # livere: MTAyMC81MDk5NC8yNzQ3Ng  # https://www.livere.com
-    disqus: leopard
+   # disqus: 
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
-    # zhihu: panpanleopard
+    # weibo: 5366874726 
+    github: xmhhyj
+    zhihu: os-umod-go
     # juejin: xxx
     jianshu: 2ada30d8d0f7
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: xiangmuhao@outlook.com
 
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+    id: 54b3623bda4b27cbc4d70ef62e6ad128  
 
-# Google Analytics
-# 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3  
-    host: auto  
-
-
-# 《----------------- 上面的信息修改成你自己的 ---------------------------》
-#
-#
-#  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： https://github.com/leopardpan/leopardpan.github.io
-#
-#
-# 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
 
 
 permalink: /:year/:month/:title/
