--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
 title: YiTeiCZR Blog
 subtitle: YT & CZR
-description: 欢迎来到我的个人站~
+description: 五月白毛尤为雪，寒风春迟私丝夏。
 # 头像里面的标题
 avatarTitle: YiTeiCZR
 # 头像里面的描述
 avatarDesc: 独立组织开发 / UXUF-desk
-url: "http://leopardpan.cn"
+url: "http://yiteiczr.org"
 
 # 博客是否自动生成目录，false为不生成
 enableToc: true
