--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ social:
     github: xmhhyj
     zhihu: os-umod-go
     # juejin: xxx
-    jianshu: 2ada30d8d0f7
+    # jianshu: 2ada30d8d0f7
     # twitter: 
     mail: xiangmuhao@outlook.com
 
